Convert InitializeSystemProfileMetrics to provider:AsyncInit

Bug: 739895
Change-Id: I8ee97e9deace636c92b0ec27fe34e451798922bd