components/metrics/metrics_provider.h
@@ -5,6 +5,7 @@
 #ifndef COMPONENTS_METRICS_METRICS_PROVIDER_H_
 #define COMPONENTS_METRICS_METRICS_PROVIDER_H_
 
+#include "base/callback.h"
 #include "base/macros.h"
 
 namespace base {
@@ -25,6 +26,9 @@ class MetricsProvider {
 
   // Called after initialiazation of MetricsService and field trials.
   virtual void Init();
+
+  // Called to wait for async initialization to complete.
+  virtual void AsyncInit(const base::Closure& done_callback);
 
   // Called when a new MetricsLog is created.
   virtual void OnDidCreateMetricsLog();
